# pyspark-sampling

./: .gitignore  .pre-commit-config.yaml  Architecture.md  CONTRIBUTING.rst  DEVELOP.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  RELEASE.md  build.sh  pyproject.toml  requirements.txt  roadmap.md  setup.py  sparksampling_example.ipynb  sparksampling_example_bak.ipynb  start-minikube.sh  tox.ini  trail.ipynb
client/: README.md  README.rst  RELEASE.md  publish.sh  pyproject.toml  setup.py
client/dockerbuild/: config.json  ssc.Dockerfile
client/sparksampling_client/: cli.py  config.py  session.py
client/sparksampling_client/proto/: sampling_service_pb2.py  sampling_service_pb2_grpc.py
client/tests/: test_apply.py
data/: 10w_x_10.csv  empty.csv  relation-a.csv  relation-b.csv  relation-c.csv  unbalance_500v50_10.csv  unbalance_5w1k_10.csv  unbalance_5w5k_10.csv
db/: evaluation_job.sql  sample_job.sql  smaple_job.sql
doc/: hadoop3.2standalone.md  spark_standalone.md  swagger.json
dockerbuild/: pysparksampling-dev.Dockerfile  pysparksampling.Dockerfile
example/extension-example/: DEVELOP.md  setup.py
exp/: 4.wf-million-LR.ipynb  compare_exp.py  enn.ipynb  enn.py  evaluation_job_list.json  readme.md  sampling_job_list.json  smote.py  ten_million_top1k.csv  timming_exp.py
exp/utils/: consts.py  utilities.py
k8s/: spark-sampling-deployment.yaml  spark-sampling-headless-service.yaml  spark-sampling-service.yaml  start.sh
pb/: README.md  sampling_service.proto
sparksampling/: .coveragerc  __init__.py  app.py  config.py  default_app_config.py  engine_factory.py  error.py  mixin.py  route.py  sdk.py  service.py  submit.py  utilities.py  var.py  watchdog.py
sparksampling/core/: __init__.py  base.py  db_connector.py  orm.py
sparksampling/core/dataio/: __init__.py  base_dataio.py  configurable_dataio.py  csv_dataio.py  text_dataio.py
sparksampling/core/engine/: __init__.py  base_engine.py  evaluation_engine.py  sampling_engine.py  statistics_engine.py
sparksampling/core/job/: __init__.py  base_job.py
sparksampling/core/mlsamplinglib/: __init__.py  enn.py  func.py  ref.py  smote.py  smoteenn.py
sparksampling/core/sampling/: __init__.py  base.py  data_io.py  job.py  sampling_engine.py
sparksampling/customize/: custom_config.py  custom_config_example.py  dummy_dataio.py  dummy_job.py
sparksampling/engine/: __init__.py  base_engine.py  dummy_engine.py  engine_factory.py  rms_engine.py  sms_engine.py  stop_engine.py
sparksampling/evaluation/: __init__.py  base_hook.py  dummy_hook.py  hook_msg.py  warn_hook.py
sparksampling/evaluation_extension/dummy_extension/: __init__.py  dummy_hook.py
sparksampling/file_format/: __init__.py  base_file_format.py  csv_file_imp.py  file_factory.py  output_adapter.py
sparksampling/handler/: __init__.py  base_handler.py  singleton_handler.py
sparksampling/handler/processmodule/: __init__.py  base_process_module.py  cancel_process_module.py  evaluation_process_module.py  ml_sampling_process_module.py  query_process_module.py  sampling_process_module.py  statistics_process_module.py  stop_process_module.py
sparksampling/manager/: process_handler.py
sparksampling/manager/processmodule/: __init__.py  base_process_module.py
sparksampling/processmodule/: __init__.py  base_process_module.py  sampling_process_module.py
sparksampling/proto/: sampling_service_pb2.py  sampling_service_pb2_grpc.py
sparksampling/sample/: __init__.py  base_sampling.py  cluster_sampling_imp.py  random_sampling_imp.py  sampling_factory.py  simple_sampling_imp.py  stratified_sampling_imp.py
sparksampling/tests/: __init__.py  base_test_module.py  basicTest.http  http-client.env.json  replace.py  test_evaluation.py  test_query.py  test_sampling.py  test_simple_sampling.py
sparksampling/tests/log/: readme.txt
sparksampling/tests/requestbody/: bad-json.json  compare-evaluation.json  enn-sampling.json  evaluation-compare.json  evaluation-kmeans.json  imb-enn-sampling.json  imb-smote-enn-sampling.json  imb-smote-sampling.json  list.json  query.json  simple-random-sampling-txt.json  simple-random-sampling.json  smote-enn-sampling.json  smote-sampling.json  statistics-job.json  statistics-path.json  statistics.json  stratified-sampling.json
sparksampling/utilities/: __init__.py  code.py  custom_error.py  logging.conf  utilities.py  var.py
sparksampling_proto/: README.md  pyproject.toml
sparksampling_proto/pb/: sampling_service.proto
sparksampling_proto/sparksampling_proto/: sampling_service_pb2.py  sampling_service_pb2_grpc.py
tests/: conftest.py  test_feature.py  test_rms_engine.py  test_s3.py  test_sms_sampling.py  utilities.py
(+41 files in other folders)
