[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "sparksampling-proto"
description = "python proto for sparksampling"
keywords = ["sparksampling"]
requires-python = ">=3.8"
dependencies = [
    'grpcio>=1.51.0',
    'grpcio-tools>=1.15.0',
    'protobuf>=4',
]
dynamic = ["version", ]

[[project.authors]]
name = "Wh1isper"
email = "9573586@qq.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/Wh1isper/pyspark-sampling"

[tool.check-manifest]
ignore = [".*", ]

[tool.hatch.version]
path = "sparksampling_proto/__init__.py"
